--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -842,7 +842,7 @@
     "        num_neighbors=[20, 10],\n",
     "        edge_label_index=((\"user\", \"rates\", \"item\"), test_data_all2all[\"user\", \"rates\", \"item\"].edge_label_index),\n",
     "        edge_label=test_data_all2all[\"user\", \"rates\", \"item\"].edge_label,\n",
-    "        batch_size= 3 * 128, #TO run the efficiency time use 17 as batch size, this will yield 10400 predictions that is near to MF number of preds (=10600)\n",
+    "        batch_size= 3 * 128, # TO calculate latency on inference time, use 17 as batch size, this will yield 10400 predictions that is near to MF number of preds (=10600)\n",
     "        shuffle=False,\n",
     "    )\n",
     "    sampled_data_gnn = next(iter(test_loader_gnn))\n",
@@ -859,50 +859,12 @@
     "    print('all ground truth len', len(ground_truth_gnn))\n",
     "    return pred_gnn, ground_truth_gnn\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu') # To check the memory usage of GNN, put cpu to be comparable with MF models\n",
     "start_time = time.time()\n",
     "pred_gnn, ground_truth_gnn = pred_gnn_gen(device, model_gnn, test_data_all2all)\n",
     "end_time = time.time()\n",
     "print('required time for GNN inference on testset', end_time - start_time)\n",
-    "# %memit pred_gnn_gen(device, test_data_all2all)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tue Oct 24 15:29:56 2023       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 470.182.03   Driver Version: 470.182.03   CUDA Version: 11.4     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  NVIDIA GeForce ...  Off  | 00000000:04:00.0 Off |                  N/A |\n",
-      "| 29%   29C    P2    56W / 250W |   1131MiB / 11018MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|    0   N/A  N/A     47933      G   /usr/lib/xorg/Xorg                 78MiB |\n",
-      "|    0   N/A  N/A     48206      G   /usr/bin/gnome-shell               10MiB |\n",
-      "|    0   N/A  N/A   1231349      C   ...research/.venv/bin/python     1037MiB |\n",
-      "+-----------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "!nvidia-smi\n"
+    "# %memit pred_gnn_gen(device, test_data_all2all) %Uncomment to check the memory usage of GNN on inference"
    ]
   },
   {
@@ -943,9 +905,7 @@
     "if dataset_mode == 'contract':\n",
     "    contract_to_topic_df = pd.read_parquet(\"dataset/contract_name_topic.parquet\")\n",
     "    train_df_mf= add_topic(train_df_mf, contract_to_topic_df, unique_item_id)\n",
-    "    test_df_mf = add_topic(test_df_mf, contract_to_topic_df, unique_item_id)\n",
-    "\n",
-    "\n"
+    "    test_df_mf = add_topic(test_df_mf, contract_to_topic_df, unique_item_id)"
    ]
   },
   {
@@ -1036,20 +996,20 @@
     "        test_df_mf['pred_mfc'] = float(0)\n",
     "        topic_popular_contracts_dict = topic_popular_contracts(test_df_mf)\n",
     "\n",
+    "        start_time = time.time()\n",
     "        for user, user_data in tqdm(test_df_mf.groupby('user'), total=test_df_mf['user'].nunique()):\n",
     "            user_id_internal = user_ids_mapping[user]\n",
     "            item_ids_internal = np.array([item_ids_mapping[item] for item in user_data['topic']])\n",
     "            predictions_mfc = model_mfc.predict(user_id_internal, item_ids_internal)\n",
     "            test_df_mf.loc[user_data.index, 'pred_mfc'] = predictions_mfc\n",
+    "        end_time = time.time()\n",
+    "        print('required time for MFC inference on testset with neg_edges_param = 10:', end_time - start_time)\n",
     "\n",
     "        pred_mfc = test_df_mf['pred_mfc'].to_numpy()\n",
     "        ground_truth_mfc = test_df_mf['rating'].to_numpy()\n",
     "        return pred_mfc, ground_truth_mfc\n",
     "\n",
-    "# start_time = time.time()\n",
-    "# pred_mfc, ground_truth_mfc = mfc_pred_gen(train_df_mf, test_df_mf)\n",
-    "# end_time = time.time()\n",
-    "# print('required time for MFC inference on testset with neg_edges_param = 10:', end_time - start_time)"
+    "pred_mfc, ground_truth_mfc = mfc_pred_gen(train_df_mf, test_df_mf)"
    ]
   },
   {
@@ -1468,54 +1428,6 @@
     "User coverage for mfn @15: 0.6611965491372843\n",
     "User coverage for mfn @20: 0.6641035258814704\n",
     "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "######### HIT@K EVAL V1 ##########\n",
-    "# in val_data len(edge_index) = 80670, but len(edge_label_index) = 30249, we selected edge_label_index since for train_loader used the same\n",
-    "def precision_at_k(user_id, edge_index, ground_truth, pred, k):\n",
-    "\n",
-    "    mask = edge_index[0] == user_id\n",
-    "    filtered_pred = pred[mask]\n",
-    "    filtered_ground_truth = ground_truth[mask]\n",
-    "    sorted_indices = filtered_pred.argsort()[:: -1]\n",
-    "\n",
-    "    top_k = [(filtered_ground_truth[i], filtered_pred[i]) for i in sorted_indices[:k]]\n",
-    "    hit = 0\n",
-    "    for i in range(len(top_k)):\n",
-    "        ground_truth, pred = top_k[i]\n",
-    "        if ground_truth > 0 and pred > 0: # I think we should remove this: and pred > 0:\n",
-    "            hit += 1\n",
-    "    precision = hit / k\n",
-    "\n",
-    "    return precision\n",
-    "\n",
-    "\n",
-    "def ap_at_k(k, precision_at_k, mode):\n",
-    "    precisions = []\n",
-    "    edge_index = val_loader.data['user', 'rates', 'item'].edge_label_index\n",
-    "    for user_id in tqdm(edge_index[0], total=len(edge_index[0])):\n",
-    "        if mode == 'mfn':\n",
-    "            precisions.append(precision_at_k(user_id, edge_index, ground_truth, pred_mfn, k)) # ground_truth is the same for both GNN and mf\n",
-    "        if mode == 'mfc':\n",
-    "            precisions.append(precision_at_k(user_id, edge_index, ground_truth, pred_mfc, k))\n",
-    "        else:\n",
-    "            precisions.append(precision_at_k(user_id, edge_index, ground_truth, pred, k))\n",
-    "            break\n",
-    "\n",
-    "    return np.mean(precisions)\n",
-    "\n",
-    "\n",
-    "k_values = [1, 2, 3, 4, 5]\n",
-    "for k in k_values:\n",
-    "    hit_at_k = ap_at_k(k, precision_at_k, mode='GNN')\n",
-    "    print(f\"AP@{k}:\", hit_at_k)\n",
-    "\n"
    ]
   }
  ],
